--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-modal-video": "^1.2.6",
     "react-redux": "^7.2.1",
