--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-circular-progressbar": "^2.0.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-modal-video": "^1.2.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scrollbar-js": "^1.0.1",
+    "react-select": "^3.1.1",
     "react-slick": "^0.27.13",
     "react-youtube": "^7.13.0",
     "reactstrap": "^8.7.1",
