--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-circular-progressbar": "^2.0.3",
+    "react-confirm-alert": "^2.6.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-modal-video": "^1.2.6",
@@ -42,6 +43,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^10.12.5",
     "swiper": "^6.3.5",
     "yup": "^0.29.3"
   },
