--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scrollbar-js": "^1.0.1",
     "react-select": "^3.1.1",
     "react-slick": "^0.27.13",
+    "react-transition-group": "^1.2.1",
     "react-youtube": "^7.13.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
