--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-transition-group": "^4.4.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.0.0-beta.5",
