--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "swiper": "^6.3.5",
     "yup": "^0.29.3"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
