--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "formik": "^2.2.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
+    "sass": "^1.75.0"
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap-table-next": "^4.0.3",
