--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-transition-group": "^4.4.0",
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.3",
+    "ajv": "^8.17.1",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "date-fns": "^2.0.0-beta.5",
     "dayjs": "^1.9.6",
     "formik": "^2.2.3",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
-    "sass": "^1.75.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
-    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table-next": "^1.1.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-circular-progressbar": "^2.0.3",
@@ -34,7 +34,7 @@
     "react-modal-video": "^1.2.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.1",
     "react-scrollbar-js": "^1.0.1",
     "react-select": "^3.1.1",
     "react-slick": "^0.27.13",
@@ -44,6 +44,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^10.12.5",
     "swiper": "^6.3.5",
