--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "swiper": "^6.3.5",
     "yup": "^0.29.3"
   },
+  "engines": {
+    "node": "18.17.1"
+  }
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
